--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -30,6 +30,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59cbddff",
+   "metadata": {},
+   "source": [
+    "print('Your Name')\n",
+    "print('Chaithanya')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f2b4273a",
@@ -39,13 +48,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Chaithanya!\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Chaithanya!')"
    ]
   },
   {
@@ -159,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
